--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -11,6 +11,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    strategy:
+		matrix:
+			os:[ubuntu-latest,windows-latest,macOs-latest]
     permissions:
       contents: read
       packages: write
